# YesPlayMusic-T

./: .gitignore  .npmrc  README-TAURI.md  README.md  package.json  pnpm-lock.yaml  vue.config.js
src/: background.js  main.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: discord.rs  ipc.rs  lib.rs  main.rs  server.rs  settings.rs  shortcuts.rs  tray.rs  unm.rs  update.rs
src/api/: comment.js
src/assets/css/: global.scss
src/components/: CommentItem.vue  LinuxTitlebar.vue  Win32Titlebar.vue
src/electron/: ipcMain.js  menu.js  mpris.js  tray.js
src/locale/lang/: en.js  tr.js  zh-CN.js  zh-TW.js
src/store/: state.js
src/utils/: Player.js  db.js  electronStub.js  tauriBridge.js
src/views/: lyrics.vue  settings.vue
